--- a/src/app/dialogs/orderDialogs/order-detail-dialog/order-detail-dialog.component.html
+++ b/src/app/dialogs/orderDialogs/order-detail-dialog/order-detail-dialog.component.html
@@ -34,7 +34,7 @@
       </mat-form-field>
 
       <div>
-        <strong>Phone Number:</strong> {{ order.phoneNumber }}
+        <strong>Phone Number:</strong> {{ order.phoneNumber?.number }}
       </div>
     </div>
 
