--- a/src/app/ui/components/category/category.component.scss
+++ b/src/app/ui/components/category/category.component.scss
@@ -305,6 +305,7 @@ $link-color: #0000ee;
 }
 
 mat-paginator {
+  padding-bottom: 55.5px !important;
   margin-top: 1rem;
   background-color: $background-color;
 }
