--- a/src/app/ui/components/cart/cart.component.html
+++ b/src/app/ui/components/cart/cart.component.html
@@ -1,3 +1,8 @@
+<div class="cart-drawer-backdrop" 
+     [class.open]="isOpen" 
+     (click)="close()">
+</div>
+
 <div class="cart-drawer" [class.open]="isOpen">
   <div class="cart-header">
     <h2>Cart ({{ totalItemCount }} product)</h2>
